// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card-templates > renders display projector card with QR code 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#050507",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "display": "flex",
      "fontFamily": "Inter, sans-serif",
      "height": "1080px",
      "justifyContent": "space-between",
      "padding": "80px 100px",
      "width": "1920px",
    }
  }
>
  <div
    style={
      {
        "display": "flex",
        "flex": 1.2,
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "space-between",
        "paddingRight": "60px",
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": "24px",
        }
      }
    >
      <div
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "gap": "16px",
          }
        }
      >
        <div
          style={
            {
              "backgroundColor": "#10b981",
              "borderRadius": "9999px",
              "height": "20px",
              "width": "20px",
            }
          }
        />
        <span
          style={
            {
              "color": "#ffffff",
              "fontSize": "32px",
              "fontWeight": 800,
              "letterSpacing": "0.2em",
            }
          }
        >
          ASTREA
        </span>
        <div
          style={
            {
              "backgroundColor": "#064e3b",
              "borderRadius": "9999px",
              "color": "#34d399",
              "display": "flex",
              "fontSize": "18px",
              "fontWeight": 700,
              "letterSpacing": "0.05em",
              "marginLeft": "20px",
              "padding": "8px 20px",
            }
          }
        >
          LIVE COMPETITION
        </div>
      </div>
      <div
        style={
          {
            "color": "#ffffff",
            "display": "flex",
            "fontSize": "68px",
            "fontWeight": 900,
            "lineHeight": 1.15,
            "marginTop": "20px",
            "maxHeight": "240px",
            "overflow": "hidden",
          }
        }
      >
        Stellar Meridian Hackathon
      </div>
    </div>
    <div
      style={
        {
          "backgroundColor": "#09090b",
          "border": "2px solid #10b98160",
          "borderRadius": "24px",
          "display": "flex",
          "flexDirection": "column",
          "gap": "16px",
          "padding": "36px 48px",
        }
      }
    >
      <span
        style={
          {
            "color": "#a1a1aa",
            "fontSize": "20px",
            "fontWeight": 700,
            "letterSpacing": "0.1em",
          }
        }
      >
        LOCKED ON-CHAIN PRIZE POOL
      </span>
      <div
        style={
          {
            "alignItems": "baseline",
            "display": "flex",
            "gap": "16px",
          }
        }
      >
        <span
          style={
            {
              "color": "#34d399",
              "fontSize": "76px",
              "fontWeight": 900,
            }
          }
        >
          10000
        </span>
        <span
          style={
            {
              "color": "#10b981",
              "fontSize": "36px",
              "fontWeight": 700,
            }
          }
        >
          USDC
        </span>
      </div>
      <div
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <span
          style={
            {
              "color": "#71717a",
              "fontSize": "20px",
            }
          }
        >
          Secured by Stellar Soroban Smart Contract Escrow
        </span>
        <span
          style={
            {
              "color": "#e4e4e7",
              "fontSize": "20px",
              "fontWeight": 700,
            }
          }
        >
          Judging Deadline: 
          Oct 1, 2026
        </span>
      </div>
    </div>
    <div
      style={
        {
          "color": "#a1a1aa",
          "display": "flex",
          "fontSize": "22px",
          "gap": "40px",
        }
      }
    >
      <span>
        8
         Teams Registered
      </span>
      <span>
        Organizer: 
        GDQP2K…4B2P76
      </span>
    </div>
  </div>
  <div
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#0d0d12",
        "border": "1px solid #27272a",
        "borderRadius": "32px",
        "display": "flex",
        "flex": 0.8,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "48px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": "24px",
          "boxShadow": "0 20px 40px rgba(0,0,0,0.5)",
          "display": "flex",
          "padding": "24px",
        }
      }
    >
      <svg
        aria-label="Event QR Code"
        height="380"
        shapeRendering="crispEdges"
        viewBox="0 0 29 29"
        width="380"
      >
        <title>
          Event QR Code
        </title>
        <path
          d="M0,0h1v1h-1zM1,0h1v1h-1zM2,0h1v1h-1zM3,0h1v1h-1zM4,0h1v1h-1zM5,0h1v1h-1zM6,0h1v1h-1zM8,0h1v1h-1zM11,0h1v1h-1zM14,0h1v1h-1zM16,0h1v1h-1zM18,0h1v1h-1zM19,0h1v1h-1zM20,0h1v1h-1zM22,0h1v1h-1zM23,0h1v1h-1zM24,0h1v1h-1zM25,0h1v1h-1zM26,0h1v1h-1zM27,0h1v1h-1zM28,0h1v1h-1zM0,1h1v1h-1zM6,1h1v1h-1zM8,1h1v1h-1zM9,1h1v1h-1zM10,1h1v1h-1zM11,1h1v1h-1zM12,1h1v1h-1zM16,1h1v1h-1zM17,1h1v1h-1zM18,1h1v1h-1zM22,1h1v1h-1zM28,1h1v1h-1zM0,2h1v1h-1zM2,2h1v1h-1zM3,2h1v1h-1zM4,2h1v1h-1zM6,2h1v1h-1zM11,2h1v1h-1zM13,2h1v1h-1zM15,2h1v1h-1zM16,2h1v1h-1zM18,2h1v1h-1zM20,2h1v1h-1zM22,2h1v1h-1zM24,2h1v1h-1zM25,2h1v1h-1zM26,2h1v1h-1zM28,2h1v1h-1zM0,3h1v1h-1zM2,3h1v1h-1zM3,3h1v1h-1zM4,3h1v1h-1zM6,3h1v1h-1zM8,3h1v1h-1zM11,3h1v1h-1zM13,3h1v1h-1zM15,3h1v1h-1zM16,3h1v1h-1zM17,3h1v1h-1zM19,3h1v1h-1zM22,3h1v1h-1zM24,3h1v1h-1zM25,3h1v1h-1zM26,3h1v1h-1zM28,3h1v1h-1zM0,4h1v1h-1zM2,4h1v1h-1zM3,4h1v1h-1zM4,4h1v1h-1zM6,4h1v1h-1zM9,4h1v1h-1zM10,4h1v1h-1zM12,4h1v1h-1zM13,4h1v1h-1zM14,4h1v1h-1zM15,4h1v1h-1zM16,4h1v1h-1zM17,4h1v1h-1zM18,4h1v1h-1zM19,4h1v1h-1zM20,4h1v1h-1zM22,4h1v1h-1zM24,4h1v1h-1zM25,4h1v1h-1zM26,4h1v1h-1zM28,4h1v1h-1zM0,5h1v1h-1zM6,5h1v1h-1zM10,5h1v1h-1zM11,5h1v1h-1zM13,5h1v1h-1zM14,5h1v1h-1zM17,5h1v1h-1zM18,5h1v1h-1zM19,5h1v1h-1zM22,5h1v1h-1zM28,5h1v1h-1zM0,6h1v1h-1zM1,6h1v1h-1zM2,6h1v1h-1zM3,6h1v1h-1zM4,6h1v1h-1zM5,6h1v1h-1zM6,6h1v1h-1zM8,6h1v1h-1zM10,6h1v1h-1zM12,6h1v1h-1zM14,6h1v1h-1zM16,6h1v1h-1zM18,6h1v1h-1zM20,6h1v1h-1zM22,6h1v1h-1zM23,6h1v1h-1zM24,6h1v1h-1zM25,6h1v1h-1zM26,6h1v1h-1zM27,6h1v1h-1zM28,6h1v1h-1zM8,7h1v1h-1zM9,7h1v1h-1zM10,7h1v1h-1zM11,7h1v1h-1zM16,7h1v1h-1zM17,7h1v1h-1zM19,7h1v1h-1zM0,8h1v1h-1zM2,8h1v1h-1zM3,8h1v1h-1zM5,8h1v1h-1zM6,8h1v1h-1zM7,8h1v1h-1zM10,8h1v1h-1zM12,8h1v1h-1zM16,8h1v1h-1zM17,8h1v1h-1zM18,8h1v1h-1zM22,8h1v1h-1zM25,8h1v1h-1zM27,8h1v1h-1zM28,8h1v1h-1zM0,9h1v1h-1zM1,9h1v1h-1zM2,9h1v1h-1zM4,9h1v1h-1zM9,9h1v1h-1zM11,9h1v1h-1zM12,9h1v1h-1zM14,9h1v1h-1zM16,9h1v1h-1zM18,9h1v1h-1zM19,9h1v1h-1zM20,9h1v1h-1zM21,9h1v1h-1zM22,9h1v1h-1zM23,9h1v1h-1zM24,9h1v1h-1zM28,9h1v1h-1zM1,10h1v1h-1zM3,10h1v1h-1zM5,10h1v1h-1zM6,10h1v1h-1zM8,10h1v1h-1zM9,10h1v1h-1zM14,10h1v1h-1zM17,10h1v1h-1zM18,10h1v1h-1zM21,10h1v1h-1zM23,10h1v1h-1zM24,10h1v1h-1zM26,10h1v1h-1zM27,10h1v1h-1zM3,11h1v1h-1zM4,11h1v1h-1zM7,11h1v1h-1zM10,11h1v1h-1zM11,11h1v1h-1zM13,11h1v1h-1zM14,11h1v1h-1zM18,11h1v1h-1zM19,11h1v1h-1zM20,11h1v1h-1zM21,11h1v1h-1zM22,11h1v1h-1zM28,11h1v1h-1zM0,12h1v1h-1zM2,12h1v1h-1zM3,12h1v1h-1zM5,12h1v1h-1zM6,12h1v1h-1zM8,12h1v1h-1zM9,12h1v1h-1zM15,12h1v1h-1zM16,12h1v1h-1zM17,12h1v1h-1zM23,12h1v1h-1zM25,12h1v1h-1zM26,12h1v1h-1zM0,13h1v1h-1zM2,13h1v1h-1zM7,13h1v1h-1zM9,13h1v1h-1zM10,13h1v1h-1zM13,13h1v1h-1zM14,13h1v1h-1zM15,13h1v1h-1zM16,13h1v1h-1zM19,13h1v1h-1zM22,13h1v1h-1zM26,13h1v1h-1zM27,13h1v1h-1zM28,13h1v1h-1zM1,14h1v1h-1zM2,14h1v1h-1zM3,14h1v1h-1zM4,14h1v1h-1zM5,14h1v1h-1zM6,14h1v1h-1zM10,14h1v1h-1zM11,14h1v1h-1zM12,14h1v1h-1zM14,14h1v1h-1zM17,14h1v1h-1zM18,14h1v1h-1zM19,14h1v1h-1zM20,14h1v1h-1zM22,14h1v1h-1zM26,14h1v1h-1zM27,14h1v1h-1zM28,14h1v1h-1zM4,15h1v1h-1zM5,15h1v1h-1zM8,15h1v1h-1zM11,15h1v1h-1zM12,15h1v1h-1zM13,15h1v1h-1zM15,15h1v1h-1zM16,15h1v1h-1zM18,15h1v1h-1zM19,15h1v1h-1zM20,15h1v1h-1zM23,15h1v1h-1zM24,15h1v1h-1zM27,15h1v1h-1zM0,16h1v1h-1zM2,16h1v1h-1zM5,16h1v1h-1zM6,16h1v1h-1zM9,16h1v1h-1zM12,16h1v1h-1zM15,16h1v1h-1zM18,16h1v1h-1zM19,16h1v1h-1zM20,16h1v1h-1zM24,16h1v1h-1zM25,16h1v1h-1zM27,16h1v1h-1zM4,17h1v1h-1zM5,17h1v1h-1zM7,17h1v1h-1zM10,17h1v1h-1zM12,17h1v1h-1zM13,17h1v1h-1zM15,17h1v1h-1zM16,17h1v1h-1zM18,17h1v1h-1zM23,17h1v1h-1zM25,17h1v1h-1zM26,17h1v1h-1zM27,17h1v1h-1zM0,18h1v1h-1zM3,18h1v1h-1zM6,18h1v1h-1zM11,18h1v1h-1zM15,18h1v1h-1zM22,18h1v1h-1zM23,18h1v1h-1zM26,18h1v1h-1zM2,19h1v1h-1zM4,19h1v1h-1zM5,19h1v1h-1zM7,19h1v1h-1zM9,19h1v1h-1zM10,19h1v1h-1zM11,19h1v1h-1zM16,19h1v1h-1zM17,19h1v1h-1zM20,19h1v1h-1zM22,19h1v1h-1zM23,19h1v1h-1zM26,19h1v1h-1zM1,20h1v1h-1zM2,20h1v1h-1zM4,20h1v1h-1zM5,20h1v1h-1zM6,20h1v1h-1zM7,20h1v1h-1zM8,20h1v1h-1zM11,20h1v1h-1zM12,20h1v1h-1zM13,20h1v1h-1zM17,20h1v1h-1zM18,20h1v1h-1zM19,20h1v1h-1zM20,20h1v1h-1zM21,20h1v1h-1zM22,20h1v1h-1zM23,20h1v1h-1zM24,20h1v1h-1zM25,20h1v1h-1zM26,20h1v1h-1zM8,21h1v1h-1zM9,21h1v1h-1zM11,21h1v1h-1zM13,21h1v1h-1zM14,21h1v1h-1zM16,21h1v1h-1zM19,21h1v1h-1zM20,21h1v1h-1zM24,21h1v1h-1zM25,21h1v1h-1zM26,21h1v1h-1zM27,21h1v1h-1zM28,21h1v1h-1zM0,22h1v1h-1zM1,22h1v1h-1zM2,22h1v1h-1zM3,22h1v1h-1zM4,22h1v1h-1zM5,22h1v1h-1zM6,22h1v1h-1zM8,22h1v1h-1zM9,22h1v1h-1zM11,22h1v1h-1zM12,22h1v1h-1zM13,22h1v1h-1zM19,22h1v1h-1zM20,22h1v1h-1zM22,22h1v1h-1zM24,22h1v1h-1zM25,22h1v1h-1zM27,22h1v1h-1zM0,23h1v1h-1zM6,23h1v1h-1zM8,23h1v1h-1zM15,23h1v1h-1zM18,23h1v1h-1zM20,23h1v1h-1zM24,23h1v1h-1zM25,23h1v1h-1zM27,23h1v1h-1zM0,24h1v1h-1zM2,24h1v1h-1zM3,24h1v1h-1zM4,24h1v1h-1zM6,24h1v1h-1zM9,24h1v1h-1zM11,24h1v1h-1zM14,24h1v1h-1zM15,24h1v1h-1zM16,24h1v1h-1zM17,24h1v1h-1zM18,24h1v1h-1zM20,24h1v1h-1zM21,24h1v1h-1zM22,24h1v1h-1zM23,24h1v1h-1zM24,24h1v1h-1zM26,24h1v1h-1zM0,25h1v1h-1zM2,25h1v1h-1zM3,25h1v1h-1zM4,25h1v1h-1zM6,25h1v1h-1zM8,25h1v1h-1zM9,25h1v1h-1zM10,25h1v1h-1zM11,25h1v1h-1zM13,25h1v1h-1zM14,25h1v1h-1zM15,25h1v1h-1zM16,25h1v1h-1zM20,25h1v1h-1zM21,25h1v1h-1zM24,25h1v1h-1zM25,25h1v1h-1zM28,25h1v1h-1zM0,26h1v1h-1zM2,26h1v1h-1zM3,26h1v1h-1zM4,26h1v1h-1zM6,26h1v1h-1zM8,26h1v1h-1zM10,26h1v1h-1zM11,26h1v1h-1zM12,26h1v1h-1zM14,26h1v1h-1zM17,26h1v1h-1zM18,26h1v1h-1zM19,26h1v1h-1zM23,26h1v1h-1zM26,26h1v1h-1zM28,26h1v1h-1zM0,27h1v1h-1zM6,27h1v1h-1zM9,27h1v1h-1zM15,27h1v1h-1zM16,27h1v1h-1zM19,27h1v1h-1zM20,27h1v1h-1zM21,27h1v1h-1zM23,27h1v1h-1zM24,27h1v1h-1zM25,27h1v1h-1zM27,27h1v1h-1zM0,28h1v1h-1zM1,28h1v1h-1zM2,28h1v1h-1zM3,28h1v1h-1zM4,28h1v1h-1zM5,28h1v1h-1zM6,28h1v1h-1zM8,28h1v1h-1zM14,28h1v1h-1zM18,28h1v1h-1zM19,28h1v1h-1zM20,28h1v1h-1zM21,28h1v1h-1zM23,28h1v1h-1zM27,28h1v1h-1z"
          fill="#000000"
        />
      </svg>
    </div>
    <div
      style={
        {
          "color": "#ffffff",
          "display": "flex",
          "fontSize": "24px",
          "fontWeight": 700,
          "marginTop": "28px",
          "textAlign": "center",
        }
      }
    >
      Scan to view & register
    </div>
    <div
      style={
        {
          "color": "#71717a",
          "display": "flex",
          "fontSize": "18px",
          "marginTop": "8px",
          "textAlign": "center",
        }
      }
    >
      astrea.app
    </div>
  </div>
</div>
`;

exports[`card-templates > renders generic card for excluded states or no money 1`] = `<GenericCard />`;

exports[`card-templates > renders open card for JUDGING event 1`] = `
<OpenEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": false,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "JUDGING",
      "teamsRegistered": 8,
      "templateType": "open",
      "winners": [],
    }
  }
/>
`;

exports[`card-templates > renders open card for LIVE event 1`] = `
<OpenEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": false,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "LIVE",
      "teamsRegistered": 8,
      "templateType": "open",
      "winners": [],
    }
  }
/>
`;

exports[`card-templates > renders open card for LIVE event with closed registrations 1`] = `
<OpenEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": true,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "LIVE",
      "teamsRegistered": 8,
      "templateType": "open",
      "winners": [],
    }
  }
/>
`;

exports[`card-templates > renders winners template with 1 winner (hero) 1`] = `
<WinnersEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": false,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "COMPLETED",
      "teamsRegistered": 8,
      "templateType": "winners",
      "winners": [
        {
          "amount": "5000",
          "asset": "USDC",
          "members": [
            "@builder_1",
          ],
          "rank": 1,
          "teamName": "Team Alpha 1",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000001",
        },
      ],
    }
  }
/>
`;

exports[`card-templates > renders winners template with 2 winners (podium of 2) 1`] = `
<WinnersEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": false,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "COMPLETED",
      "teamsRegistered": 8,
      "templateType": "winners",
      "winners": [
        {
          "amount": "5000",
          "asset": "USDC",
          "members": [
            "@builder_1",
          ],
          "rank": 1,
          "teamName": "Team Alpha 1",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000001",
        },
        {
          "amount": "2500",
          "asset": "USDC",
          "members": [
            "@builder_2",
          ],
          "rank": 2,
          "teamName": "Team Alpha 2",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000002",
        },
      ],
    }
  }
/>
`;

exports[`card-templates > renders winners template with 3 winners (podium of 3) 1`] = `
<WinnersEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": false,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "COMPLETED",
      "teamsRegistered": 8,
      "templateType": "winners",
      "winners": [
        {
          "amount": "5000",
          "asset": "USDC",
          "members": [
            "@builder_1",
          ],
          "rank": 1,
          "teamName": "Team Alpha 1",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000001",
        },
        {
          "amount": "2500",
          "asset": "USDC",
          "members": [
            "@builder_2",
          ],
          "rank": 2,
          "teamName": "Team Alpha 2",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000002",
        },
        {
          "amount": "1667",
          "asset": "USDC",
          "members": [
            "@builder_3",
          ],
          "rank": 3,
          "teamName": "Team Alpha 3",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000003",
        },
      ],
    }
  }
/>
`;

exports[`card-templates > renders winners template with 6 winners (top 3 + 3 more) 1`] = `
<WinnersEventCard
  model={
    {
      "formattedDeadline": "Oct 1, 2026",
      "hasVerifiableMoney": true,
      "id": "evt-test-1",
      "isRegistrationClosed": false,
      "judges": [
        "cLamberti",
        "Dmong04",
      ],
      "judgingDeadlineAt": "2026-10-01T00:00:00.000Z",
      "locale": "en",
      "name": "Stellar Meridian Hackathon",
      "organizer": "GDQP2K…4B2P76",
      "prizePool": {
        "amount": "10000",
        "asset": "USDC",
      },
      "registrationClosesAt": "2026-09-25T00:00:00.000Z",
      "status": "COMPLETED",
      "teamsRegistered": 8,
      "templateType": "winners",
      "winners": [
        {
          "amount": "5000",
          "asset": "USDC",
          "members": [
            "@builder_1",
          ],
          "rank": 1,
          "teamName": "Team Alpha 1",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000001",
        },
        {
          "amount": "2500",
          "asset": "USDC",
          "members": [
            "@builder_2",
          ],
          "rank": 2,
          "teamName": "Team Alpha 2",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000002",
        },
        {
          "amount": "1667",
          "asset": "USDC",
          "members": [
            "@builder_3",
          ],
          "rank": 3,
          "teamName": "Team Alpha 3",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000003",
        },
        {
          "amount": "1250",
          "asset": "USDC",
          "members": [
            "@builder_4",
          ],
          "rank": 4,
          "teamName": "Team Alpha 4",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000004",
        },
        {
          "amount": "1000",
          "asset": "USDC",
          "members": [
            "@builder_5",
          ],
          "rank": 5,
          "teamName": "Team Alpha 5",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000005",
        },
        {
          "amount": "833",
          "asset": "USDC",
          "members": [
            "@builder_6",
          ],
          "rank": 6,
          "teamName": "Team Alpha 6",
          "txHash": "txhash000000000000000000000000000000000000000000000000000000000006",
        },
      ],
    }
  }
/>
`;
